Fixed contact card on mobile devices.

--- a/stylesheet.css
+++ b/stylesheet.css
@@ -115,8 +115,8 @@ jumbotron{
 
 /*Floating action button*/
 .floatingbutton{
-    width:100px;
-    height: 100px;
+    width:5em;
+    height: 5em;
     background-color: #00FFFF;
     border-radius: 50px;
     position: fixed;
@@ -249,10 +249,13 @@ td{
     div .img-responsive{
         margin:0 auto;
     }
-    div .contactcardlayout{
-        font-size: 1em;
+    .contactcardlayout{
+        font-size: 0.5em;
         padding: 5px;
         margin: 0 auto;
+        width: 100%;
+        left:0;
+        right:0;
     }
     .platformsexplanation{
         display: block;
@@ -424,13 +427,13 @@ div .projectimage{
 }
 
 .desktopsplit {
-    vertical-align: middle;
-    display: inline-block;
+    display: table-cell;
+    vertical-align: baseline;
 
 }
 
 .other-container {
-    display: table;
+    display: table-row;
 }
 .other-container > *{
 vertical-align: middle;
